src/l3interpreter/antlr/L3Parser.java
// Generated from L3.g4 by ANTLR 4.0
package l3interpreter.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class L3Parser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LC=1, RC=2, DEF=3, LA=4, RA=5, IF=6, ELSE=7, WHILE=8, DO=9, RETURN=10, 
		SEMI=11, BREAK=12, CONTINUE=13, TRUE=14, FALSE=15, COMA=16, LB=17, RB=18, 
		MUL=19, DIV=20, MOD=21, ADD=22, SUB=23, LT=24, GT=25, LET=26, GET=27, 
		AND=28, EQ=29, NEQ=30, OR=31, QM=32, CL=33, ASSIGN=34, NEW=35, IMPORT=36, 
		DOT=37, VAR=38, Identifier=39, WS=40, STRING=41, LETTER=42, INTEGER=43, 
		FLOAT=44, COMMENT=45, LINE_COMMENT=46;
	public static final String[] tokenNames = {
		"<INVALID>", "'{'", "'}'", "'def'", "'('", "')'", "'if'", "'else'", "'while'", 
		"'do'", "'return'", "';'", "'break'", "'continue'", "'true'", "'false'", 
		"','", "'['", "']'", "'*'", "'/'", "'%'", "'+'", "'-'", "'<'", "'>'", 
		"'<='", "'>='", "'&&'", "'=='", "'!='", "'||'", "'?'", "':'", "'='", "'new'", 
		"'import'", "'.'", "'var'", "Identifier", "WS", "STRING", "LETTER", "INTEGER", 
		"FLOAT", "COMMENT", "LINE_COMMENT"
	};
	public static final int
		RULE_prog = 0, RULE_finalstatment = 1, RULE_functionDef = 2, RULE_formalParameterDecls = 3, 
		RULE_innerClassName = 4, RULE_creator = 5, RULE_packagePath = 6, RULE_block = 7, 
		RULE_statement = 8, RULE_parExpression = 9, RULE_statementExpression = 10, 
		RULE_expression = 11, RULE_expressionList = 12, RULE_primary = 13, RULE_literal = 14;
	public static final String[] ruleNames = {
		"prog", "finalstatment", "functionDef", "formalParameterDecls", "innerClassName", 
		"creator", "packagePath", "block", "statement", "parExpression", "statementExpression", 
		"expression", "expressionList", "primary", "literal"
	};

	@Override
	public String getGrammarFileName() { return "L3.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public L3Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public FinalstatmentContext finalstatment(int i) {
			return getRuleContext(FinalstatmentContext.class,i);
		}
		public List<FinalstatmentContext> finalstatment() {
			return getRuleContexts(FinalstatmentContext.class);
		}
		public TerminalNode EOF() { return getToken(L3Parser.EOF, 0); }
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof L3Visitor ) return ((L3Visitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(33);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LC) | (1L << DEF) | (1L << LA) | (1L << IF) | (1L << WHILE) | (1L << DO) | (1L << RETURN) | (1L << SEMI) | (1L << BREAK) | (1L << CONTINUE) | (1L << TRUE) | (1L << FALSE) | (1L << NEW) | (1L << IMPORT) | (1L << VAR) | (1L << Identifier) | (1L << STRING) | (1L << INTEGER) | (1L << FLOAT))) != 0)) {
				{
				{
				setState(30); finalstatment();
				}
				}
				setState(35);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(36); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FinalstatmentContext extends ParserRuleContext {
		public FinalstatmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_finalstatment; }
	 
		public FinalstatmentContext() { }
		public void copyFrom(FinalstatmentContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class StatementLabelContext extends FinalstatmentContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public StatementLabelContext(FinalstatmentContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof L3Visitor ) return ((L3Visitor<? extends T>)visitor).visitStatementLabel(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FunctionDefLabelContext extends FinalstatmentContext {
		public FunctionDefContext functionDef() {
			return getRuleContext(FunctionDefContext.class,0);
		}
		public FunctionDefLabelContext(FinalstatmentContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof L3Visitor ) return ((L3Visitor<? extends T>)visitor).visitFunctionDefLabel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FinalstatmentContext finalstatment() throws RecognitionException {
		FinalstatmentContext _localctx = new FinalstatmentContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_finalstatment);
		try {
			setState(40);
			switch (_input.LA(1)) {
			case LC:
			case LA:
			case IF:
			case WHILE:
			case DO:
			case RETURN:
			case SEMI:
			case BREAK:
			case CONTINUE:
			case TRUE:
			case FALSE:
			case NEW:
			case IMPORT:
			case VAR:
			case Identifier:
			case STRING:
			case INTEGER:
			case FLOAT:
				_localctx = new StatementLabelContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(38); statement();
				}
				break;
			case DEF:
				_localctx = new FunctionDefLabelContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(39); functionDef();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDefContext extends ParserRuleContext {
		public FormalParameterDeclsContext formalParameterDecls() {
			return getRuleContext(FormalParameterDeclsContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode Identifier() { return getToken(L3Parser.Identifier, 0); }
		public FunctionDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDef; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof L3Visitor ) return ((L3Visitor<? extends T>)visitor).visitFunctionDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionDefContext functionDef() throws RecognitionException {
		FunctionDefContext _localctx = new FunctionDefContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_functionDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42); match(DEF);
			setState(43); match(Identifier);
			setState(44); match(LA);
			setState(46);
			_la = _input.LA(1);
			if (_la==Identifier) {
				{
				setState(45); formalParameterDecls();
				}
			}

			setState(48); match(RA);
			setState(49); block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormalParameterDeclsContext extends ParserRuleContext {
		public FormalParameterDeclsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formalParameterDecls; }
	 
		public FormalParameterDeclsContext() { }
		public void copyFrom(FormalParameterDeclsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class FunctionParameterDefLabelContext extends FormalParameterDeclsContext {
		public TerminalNode Identifier(int i) {
			return getToken(L3Parser.Identifier, i);
		}
		public List<TerminalNode> Identifier() { return getTokens(L3Parser.Identifier); }
		public FunctionParameterDefLabelContext(FormalParameterDeclsContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof L3Visitor ) return ((L3Visitor<? extends T>)visitor).visitFunctionParameterDefLabel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FormalParameterDeclsContext formalParameterDecls() throws RecognitionException {
		FormalParameterDeclsContext _localctx = new FormalParameterDeclsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_formalParameterDecls);
		int _la;
		try {
			_localctx = new FunctionParameterDefLabelContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(51); match(Identifier);
			setState(56);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMA) {
				{
				{
				setState(52); match(COMA);
				setState(53); match(Identifier);
				}
				}
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InnerClassNameContext extends ParserRuleContext {
		public InnerClassNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_innerClassName; }
	 
		public InnerClassNameContext() { }
		public void copyFrom(InnerClassNameContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class InnerClassNameLabelContext extends InnerClassNameContext {
		public TerminalNode Identifier(int i) {
			return getToken(L3Parser.Identifier, i);
		}
		public List<TerminalNode> Identifier() { return getTokens(L3Parser.Identifier); }
		public InnerClassNameLabelContext(InnerClassNameContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof L3Visitor ) return ((L3Visitor<? extends T>)visitor).visitInnerClassNameLabel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InnerClassNameContext innerClassName() throws RecognitionException {
		InnerClassNameContext _localctx = new InnerClassNameContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_innerClassName);
		int _la;
		try {
			_localctx = new InnerClassNameLabelContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(59); match(Identifier);
			setState(64);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DOT) {
				{
				{
				setState(60); match(DOT);
				setState(61); match(Identifier);
				}
				}
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreatorContext extends ParserRuleContext {
		public CreatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_creator; }
	 
		public CreatorContext() { }
		public void copyFrom(CreatorContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class CreatorLabelContext extends CreatorContext {
		public InnerClassNameContext innerClassName() {
			return getRuleContext(InnerClassNameContext.class,0);
		}
		public ExpressionListContext expressionList() {
			return getRuleContext(ExpressionListContext.class,0);
		}
		public CreatorLabelContext(CreatorContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof L3Visitor ) return ((L3Visitor<? extends T>)visitor).visitCreatorLabel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CreatorContext creator() throws RecognitionException {
		CreatorContext _localctx = new CreatorContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_creator);
		int _la;
		try {
			_localctx = new CreatorLabelContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(67); innerClassName();
			setState(68); match(LA);
			setState(70);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LA) | (1L << TRUE) | (1L << FALSE) | (1L << Identifier) | (1L << STRING) | (1L << INTEGER) | (1L << FLOAT))) != 0)) {
				{
				setState(69); expressionList();
				}
			}

			setState(72); match(RA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PackagePathContext extends ParserRuleContext {
		public PackagePathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_packagePath; }
	 
		public PackagePathContext() { }
		public void copyFrom(PackagePathContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class PackagePathLabelContext extends PackagePathContext {
		public TerminalNode Identifier(int i) {
			return getToken(L3Parser.Identifier, i);
		}
		public List<TerminalNode> Identifier() { return getTokens(L3Parser.Identifier); }
		public PackagePathLabelContext(PackagePathContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof L3Visitor ) return ((L3Visitor<? extends T>)visitor).visitPackagePathLabel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PackagePathContext packagePath() throws RecognitionException {
		PackagePathContext _localctx = new PackagePathContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_packagePath);
		int _la;
		try {
			_localctx = new PackagePathLabelContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(74); match(Identifier);
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DOT) {
				{
				{
				setState(75); match(DOT);
				setState(76); match(Identifier);
				}
				}
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof L3Visitor ) return ((L3Visitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82); match(LC);
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LC) | (1L << LA) | (1L << IF) | (1L << WHILE) | (1L << DO) | (1L << RETURN) | (1L << SEMI) | (1L << BREAK) | (1L << CONTINUE) | (1L << TRUE) | (1L << FALSE) | (1L << NEW) | (1L << IMPORT) | (1L << VAR) | (1L << Identifier) | (1L << STRING) | (1L << INTEGER) | (1L << FLOAT))) != 0)) {
				{
				{
				setState(83); statement();
				}
				}
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(89); match(RC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class BreakLabelContext extends StatementContext {
		public BreakLabelContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof L3Visitor ) return ((L3Visitor<? extends T>)visitor).visitBreakLabel(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SemiLabelContext extends StatementContext {
		public SemiLabelContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof L3Visitor ) return ((L3Visitor<? extends T>)visitor).visitSemiLabel(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NewLabelContext extends StatementContext {
		public CreatorContext creator() {
			return getRuleContext(CreatorContext.class,0);
		}
		public NewLabelContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof L3Visitor ) return ((L3Visitor<? extends T>)visitor).visitNewLabel(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class VarDefLabelContext extends StatementContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode Identifier() { return getToken(L3Parser.Identifier, 0); }
		public VarDefLabelContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof L3Visitor ) return ((L3Visitor<? extends T>)visitor).visitVarDefLabel(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IfLabelContext extends StatementContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public ParExpressionContext parExpression() {
			return getRuleContext(ParExpressionContext.class,0);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public IfLabelContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof L3Visitor ) return ((L3Visitor<? extends T>)visitor).visitIfLabel(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ImportLabelContext extends StatementContext {
		public PackagePathContext packagePath() {
			return getRuleContext(PackagePathContext.class,0);
		}
		public ImportLabelContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof L3Visitor ) return ((L3Visitor<? extends T>)visitor).visitImportLabel(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ReturnLabelContext extends StatementContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ReturnLabelContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof L3Visitor ) return ((L3Visitor<? extends T>)visitor).visitReturnLabel(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StatementExpressionLabelContext extends StatementContext {
		public StatementExpressionContext statementExpression() {
			return getRuleContext(StatementExpressionContext.class,0);
		}
		public StatementExpressionLabelContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof L3Visitor ) return ((L3Visitor<? extends T>)visitor).visitStatementExpressionLabel(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class WhileLabelContext extends StatementContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public ParExpressionContext parExpression() {
			return getRuleContext(ParExpressionContext.class,0);
		}
		public WhileLabelContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof L3Visitor ) return ((L3Visitor<? extends T>)visitor).visitWhileLabel(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DoLabelContext extends StatementContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public ParExpressionContext parExpression() {
			return getRuleContext(ParExpressionContext.class,0);
		}
		public DoLabelContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof L3Visitor ) return ((L3Visitor<? extends T>)visitor).visitDoLabel(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ContinueLabelContext extends StatementContext {
		public ContinueLabelContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof L3Visitor ) return ((L3Visitor<? extends T>)visitor).visitContinueLabel(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BlockLabelContext extends StatementContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public BlockLabelContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof L3Visitor ) return ((L3Visitor<? extends T>)visitor).visitBlockLabel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_statement);
		int _la;
		try {
			setState(134);
			switch (_input.LA(1)) {
			case LC:
				_localctx = new BlockLabelContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(91); block();
				}
				break;
			case IF:
				_localctx = new IfLabelContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(92); match(IF);
				setState(93); parExpression();
				setState(94); statement();
				setState(97);
				switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
				case 1:
					{
					setState(95); match(ELSE);
					setState(96); statement();
					}
					break;
				}
				}
				break;
			case WHILE:
				_localctx = new WhileLabelContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(99); match(WHILE);
				setState(100); parExpression();
				setState(101); statement();
				}
				break;
			case DO:
				_localctx = new DoLabelContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(103); match(DO);
				setState(104); statement();
				setState(105); match(WHILE);
				setState(106); parExpression();
				setState(107); match(SEMI);
				}
				break;
			case RETURN:
				_localctx = new ReturnLabelContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(109); match(RETURN);
				setState(111);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LA) | (1L << TRUE) | (1L << FALSE) | (1L << Identifier) | (1L << STRING) | (1L << INTEGER) | (1L << FLOAT))) != 0)) {
					{
					setState(110); expression(0);
					}
				}

				setState(113); match(SEMI);
				}
				break;
			case BREAK:
				_localctx = new BreakLabelContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(114); match(BREAK);
				setState(115); match(SEMI);
				}
				break;
			case CONTINUE:
				_localctx = new ContinueLabelContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(116); match(CONTINUE);
				setState(117); match(SEMI);
				}
				break;
			case NEW:
				_localctx = new NewLabelContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(118); match(NEW);
				setState(119); creator();
				setState(120); match(SEMI);
				}
				break;
			case VAR:
				_localctx = new VarDefLabelContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(122); match(VAR);
				setState(123); match(Identifier);
				setState(126);
				_la = _input.LA(1);
				if (_la==ASSIGN) {
					{
					setState(124); match(ASSIGN);
					setState(125); expression(0);
					}
				}

				}
				break;
			case IMPORT:
				_localctx = new ImportLabelContext(_localctx);
				enterOuterAlt(_localctx, 10);
				{
				setState(128); match(IMPORT);
				setState(129); packagePath();
				}
				break;
			case LA:
			case TRUE:
			case FALSE:
			case Identifier:
			case STRING:
			case INTEGER:
			case FLOAT:
				_localctx = new StatementExpressionLabelContext(_localctx);
				enterOuterAlt(_localctx, 11);
				{
				setState(130); statementExpression();
				setState(131); match(SEMI);
				}
				break;
			case SEMI:
				_localctx = new SemiLabelContext(_localctx);
				enterOuterAlt(_localctx, 12);
				{
				setState(133); match(SEMI);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParExpressionContext extends ParserRuleContext {
		public ParExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parExpression; }
	 
		public ParExpressionContext() { }
		public void copyFrom(ParExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ParExpressoinLabelContext extends ParExpressionContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ParExpressoinLabelContext(ParExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof L3Visitor ) return ((L3Visitor<? extends T>)visitor).visitParExpressoinLabel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParExpressionContext parExpression() throws RecognitionException {
		ParExpressionContext _localctx = new ParExpressionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_parExpression);
		try {
			_localctx = new ParExpressoinLabelContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(136); match(LA);
			setState(137); expression(0);
			setState(138); match(RA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementExpressionContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public StatementExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statementExpression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof L3Visitor ) return ((L3Visitor<? extends T>)visitor).visitStatementExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementExpressionContext statementExpression() throws RecognitionException {
		StatementExpressionContext _localctx = new StatementExpressionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_statementExpression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140); expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
